package io.github.CR.PlagueRats.GUI;

public interface Command {
    public void execute();
}
